// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LedgerConnectionStep should emit event on connect 1`] = `
<div>
  <section
    class="space-y-8"
    data-testid="LedgerConnectionStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Open App on Ledger
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Open the app on your Ledger and check for details.
        </div>
      </div>
    </div>
    <fieldset
      class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
      </label>
      <div>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="ImportWallet__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="ImportWallet__network-input"
            id="ImportWallet__network-label"
          />
          
          <div
            class="Input__InputWrapperStyled-sc-1i8sd1r-0 iqZIWh"
            disabled=""
          >
            <div
              aria-label="ARK Devnet"
              class="Circle__CircleWrapper-sc-d5u41q-0 cPUFYC border-theme-secondary-200 dark:border-theme-secondary-700 text-theme-secondary-500 ring-theme-background"
              data-testid="SelectNetworkInput__network"
            >
              <div
                class="sc-bdnxRM NjstW"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
            <div
              class="relative flex flex-1 h-full"
            >
              <input
                aria-autocomplete="list"
                aria-controls="ImportWallet__network-menu"
                aria-labelledby="ImportWallet__network-label"
                autocomplete="off"
                class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full text-theme-secondary-text"
                data-testid="SelectNetworkInput__input"
                disabled=""
                id="ImportWallet__network-input"
                placeholder="Enter a cryptoasset name"
                value="ARK Devnet"
              />
              
            </div>
          </div>
        </div>
        <div
          class=""
          data-testid="SelectNetwork__options"
        >
          <div
            class="mt-6 hidden"
          >
            <ul
              aria-labelledby="ImportWallet__network-label"
              class="grid grid-cols-7 gap-3 mt-3"
              id="ImportWallet__network-menu"
              role="listbox"
            />
          </div>
          <div
            class="mt-6 hidden"
          >
            <ul
              aria-labelledby="ImportWallet__network-label"
              class="grid grid-cols-7 gap-3 mt-3"
              id="ImportWallet__network-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </fieldset>
    <div
      class="flex overflow-hidden flex-col space-y-4 rounded-lg p-4 bg-theme-success-50 dark:bg-theme-secondary-800 sm:space-y-0 sm:space-x-4 sm:flex-row sm:items-center"
    >
      <div
        class="h-11 w-11 flex flex-shrink-0 items-center justify-center rounded-lg text-white bg-theme-success-600"
      >
        <div
          class="sc-bdnxRM NjstW"
          height="20"
          width="20"
        >
          <svg>
            circle-check-mark.svg
          </svg>
        </div>
      </div>
      <div
        class="flex flex-col w-full"
      >
        <div
          class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
        >
          Successfully connected
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`LedgerConnectionStep should emit event on fail 1`] = `
<div>
  <section
    class="space-y-8"
    data-testid="LedgerConnectionStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Open App on Ledger
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Open the app on your Ledger and check for details.
        </div>
      </div>
    </div>
    <fieldset
      class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
      </label>
      <div>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="ImportWallet__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="ImportWallet__network-input"
            id="ImportWallet__network-label"
          />
          
          <div
            class="Input__InputWrapperStyled-sc-1i8sd1r-0 iqZIWh"
            disabled=""
          >
            <div
              aria-label="ARK Devnet"
              class="Circle__CircleWrapper-sc-d5u41q-0 cPUFYC border-theme-secondary-200 dark:border-theme-secondary-700 text-theme-secondary-500 ring-theme-background"
              data-testid="SelectNetworkInput__network"
            >
              <div
                class="sc-bdnxRM NjstW"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
            <div
              class="relative flex flex-1 h-full"
            >
              <input
                aria-autocomplete="list"
                aria-controls="ImportWallet__network-menu"
                aria-labelledby="ImportWallet__network-label"
                autocomplete="off"
                class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full text-theme-secondary-text"
                data-testid="SelectNetworkInput__input"
                disabled=""
                id="ImportWallet__network-input"
                placeholder="Enter a cryptoasset name"
                value="ARK Devnet"
              />
              
            </div>
          </div>
        </div>
        <div
          class=""
          data-testid="SelectNetwork__options"
        >
          <div
            class="mt-6 hidden"
          >
            <ul
              aria-labelledby="ImportWallet__network-label"
              class="grid grid-cols-7 gap-3 mt-3"
              id="ImportWallet__network-menu"
              role="listbox"
            />
          </div>
          <div
            class="mt-6 hidden"
          >
            <ul
              aria-labelledby="ImportWallet__network-label"
              class="grid grid-cols-7 gap-3 mt-3"
              id="ImportWallet__network-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </fieldset>
    <div
      class="space-y-8"
    >
      <svg
        class="mx-auto"
      >
        waiting-ledger-device-dark-green.svg
      </svg>
      <div
        class="inline-flex justify-center items-center space-x-3 w-full"
      >
        <div
          class="Spinner-sc-1rpx65r-0 jouzuN"
          color="info"
        />
        <span
          class="font-semibold animate-pulse text-theme-secondary-text"
        >
          Open the ARK app on your device ...
        </span>
      </div>
    </div>
  </section>
</div>
`;

exports[`LedgerConnectionStep should show update error if app version is less than minimum version 1`] = `
<div>
  <section
    class="space-y-8"
    data-testid="LedgerConnectionStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Open App on Ledger
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Open the app on your Ledger and check for details.
        </div>
      </div>
    </div>
    <fieldset
      class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
      </label>
      <div>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="ImportWallet__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="ImportWallet__network-input"
            id="ImportWallet__network-label"
          />
          
          <div
            class="Input__InputWrapperStyled-sc-1i8sd1r-0 iqZIWh"
            disabled=""
          >
            <div
              aria-label="ARK Devnet"
              class="Circle__CircleWrapper-sc-d5u41q-0 cPUFYC border-theme-secondary-200 dark:border-theme-secondary-700 text-theme-secondary-500 ring-theme-background"
              data-testid="SelectNetworkInput__network"
            >
              <div
                class="sc-bdnxRM NjstW"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
            <div
              class="relative flex flex-1 h-full"
            >
              <input
                aria-autocomplete="list"
                aria-controls="ImportWallet__network-menu"
                aria-labelledby="ImportWallet__network-label"
                autocomplete="off"
                class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full text-theme-secondary-text"
                data-testid="SelectNetworkInput__input"
                disabled=""
                id="ImportWallet__network-input"
                placeholder="Enter a cryptoasset name"
                value="ARK Devnet"
              />
              
            </div>
          </div>
        </div>
        <div
          class=""
          data-testid="SelectNetwork__options"
        >
          <div
            class="mt-6 hidden"
          >
            <ul
              aria-labelledby="ImportWallet__network-label"
              class="grid grid-cols-7 gap-3 mt-3"
              id="ImportWallet__network-menu"
              role="listbox"
            />
          </div>
          <div
            class="mt-6 hidden"
          >
            <ul
              aria-labelledby="ImportWallet__network-label"
              class="grid grid-cols-7 gap-3 mt-3"
              id="ImportWallet__network-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </fieldset>
    <div
      class="flex overflow-hidden flex-col space-y-4 rounded-lg p-4 bg-theme-danger-50 dark:bg-theme-secondary-800 sm:space-y-0 sm:space-x-4 sm:flex-row sm:items-center"
    >
      <div
        class="h-11 w-11 flex flex-shrink-0 items-center justify-center rounded-lg text-white bg-theme-danger-400"
      >
        <div
          class="sc-bdnxRM NjstW"
          height="20"
          width="20"
        >
          <svg>
            circle-cross.svg
          </svg>
        </div>
      </div>
      <div
        class="flex flex-col w-full"
      >
        <div
          class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
        >
          The ARK app version is 1.0.1. Please update the ARK app via Ledger Live.
        </div>
      </div>
    </div>
  </section>
</div>
`;
